moved Makefile to main folder

--- a/wip/Makefile
+++ b/wip/Makefile
@@ -6,7 +6,7 @@
 #    By: ottouti <ottouti@student.42quebec.com>     +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/11/17 19:30:44 by ottouti           #+#    #+#              #
-#    Updated: 2023/12/01 20:09:06 by ottouti          ###   ########.fr        #
+#    Updated: 2023/12/01 20:44:35 by ottouti          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -15,14 +15,14 @@ NAME = push_swap
 CC = gcc
 CFLAGS = -Wall -Wextra -Werror -I../include/ -fsanitize=address
 DEBUGFLAGS = -g
-LDFLAGS = -L../include/ -lft -fsanitize=address
+LDFLAGS = -L ./include/ -lft -fsanitize=address
 RM = rm -f
 
 FILES = push_swap misc swap push rotate sorting \
 		find_target error_check stack_utils init_nodes \
 		node_utils move reverse_rotate \
 
-SRCS_DIR = ./
+SRCS_DIR = ./src/
 SRCS = $(addprefix $(SRCS_DIR), $(addsuffix .c, $(FILES)))
 
 OBJS = $(SRCS:.c=.o)
@@ -30,7 +30,7 @@ OBJS = $(SRCS:.c=.o)
 all: libft $(NAME)
 
 libft:
-	$(MAKE) --silent -C ../include/
+	$(MAKE) --silent -C ./include/
 
 $(NAME): $(OBJS)
 	$(CC) $(OBJS) -o $(NAME) $(LDFLAGS)
@@ -43,11 +43,11 @@ debug: re
 
 clean:
 	$(RM) $(OBJS)
-	$(MAKE) -C ../include/ clean
+	$(MAKE) -C ./include/ clean
 
 fclean: clean
 	$(RM) $(NAME)
-	$(MAKE) -C ../include/ fclean
+	$(MAKE) -C ./include/ fclean
 
 re: fclean all
 
